--- a/listingscreen/templates/listingscreen/base.html
+++ b/listingscreen/templates/listingscreen/base.html
@@ -26,10 +26,20 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{% url 'listingscreen-home' %}">Home</a>
+              <!--<a class="nav-item nav-link" href="{% url 'listingscreen-home' %}">Home</a>-->
               <a class="nav-item nav-link" href="{% url 'listingscreen-books' %}">Books</a>
               <a class="nav-item nav-link" href="{% url 'listingscreen-movies' %}">Movies</a>
               <a class="nav-item nav-link" href="{% url 'listingscreen-tvshows' %}">TV Shows</a>
+            </div>
+            <!-- Navbar Right Side -->
+            <div class="navbar-nav">
+              {% if user.is_authenticated %}
+                <a class="navbar-brand">Hello, {{ user.username }}</a>
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{% url 'login' %}">Sign In</a>
+                <a class="nav-item nav-link" href="{% url 'registration' %}">Sign Up</a>
+              {% endif %}
             </div>
           </div>
         </div>
@@ -38,6 +48,13 @@
       <main role="main" class="container">
         <div class="row">
           <div class="col-md-8">
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
             {% block content %}{% endblock %}
           </div>
         </div>
