--- a/listingscreen/templates/listingscreen/base.html
+++ b/listingscreen/templates/listingscreen/base.html
@@ -46,13 +46,15 @@
       </nav>
       </header>
       <main role="main" class="container">
-        <div class="row">
-          <div class="col-md-8">
+        <div>
+          <div>
             {% if messages %}
               {% for message in messages %}
+               {% if "login" in message.tags %}
                 <div class="alert alert-{{ message.tags }}">
                   {{ message }}
                 </div>
+               {% endif %}
               {% endfor %}
             {% endif %}
             {% block content %}{% endblock %}
