--- a/listingscreen/templates/listingscreen/book/books.html
+++ b/listingscreen/templates/listingscreen/book/books.html
@@ -1,9 +1,80 @@
 {% extends "listingscreen/base.html" %}
 
 {% block content %}
+<style>
+  #main h1 {
+    margin: 0;
+    display: inline-block;
+  }
+  #main a {
+    float: right;
+  }
+  ::-webkit-input-placeholder {
+    font-style: italic;
+  }
+  :-moz-placeholder {
+     font-style: italic;
+  }
+  ::-moz-placeholder {
+     font-style: italic;
+  }
+  :-ms-input-placeholder {
+     font-style: italic;
+  }
+</style>
   <div class="container">
-    <h1>Book List</h1>
-    <hr>
+    <div id="main">
+      <h1>Book List</h1>
+      {% if user.is_authenticated %}
+        <a class="btn btn-primary" href="/add_book/">Add Book</a><br><br>
+      {% else %}
+      {% endif %}
+    </div>
+    <form method="post" action="/search_book/" class="form-inline">
+      {% csrf_token %}
+      <br>
+      <br>
+      <input class="form-control mr-sm-2" type="text" name="search" class="form-control" placeholder="Title, Author">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" class="btn btn-danger">Search</button>
+      <br>
+    </form>
+    <br>
+    <div>
+      {% if messages %}
+        <ul class="messages">
+          {% for i in messages %}
+           {% if "booksearch" in i.tags %}
+            <li style="color: red">{{ i }}</li>
+            <br>
+           {% endif %}
+          {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+    <div>
+      {% if each %}
+          <table class="table table-dark">
+            <thead>
+              <tr>
+                  <th>Title</th>
+                  <th>Author</th>
+                  <th>Pages</th>
+                  <th>Price</th>
+              </tr>
+            </thead>
+           {% for i in each %}
+            <tbody>
+                <tr>
+                  <td>{{ i.title }}</td>
+                  <td>{{ i.author }}</td>
+                  <td>{{ i.pages }}</td>
+                  <td>P {{ i.price }}</td>
+                </tr>
+            </tbody>
+           {% endfor %}
+           </table>
+      {% endif %}
+    </div>
 
     <table class="table table-light">
         <thead>
@@ -35,9 +106,6 @@
           {% endfor %}
         </tbody>
     </table>
-    {% if user.is_authenticated %}
-      <a class="btn btn-primary" href="/add_book/">Add Book</a><br><br>
-    {% else %}
-    {% endif %}
   </div>
+  <br>
 {% endblock content %}
