--- a/listingscreen/templates/listingscreen/movie/movies.html
+++ b/listingscreen/templates/listingscreen/movie/movies.html
@@ -1,15 +1,84 @@
 {% extends "listingscreen/base.html" %}
 
 {% block content %}
+<style>
+  #main h1 {
+    margin: 0;
+    display: inline-block;
+  }
+  #main a {
+    float: right;
+  }
+  ::-webkit-input-placeholder {
+    font-style: italic;
+  }
+  :-moz-placeholder {
+     font-style: italic;
+  }
+  ::-moz-placeholder {
+     font-style: italic;
+  }
+  :-ms-input-placeholder {
+     font-style: italic;
+  }
+</style>
   <div class="container">
-    <h1>Movie List</h1>
-    <hr>
+    <div id="main">
+      <h1>Movie List</h1>
+      {% if user.is_authenticated %}
+        <a class="btn btn-primary" href="/add_movie/">Add Movie</a><br><br>
+      {% else %}
+      {% endif %}
+    </div>
+    <form method="post" action="/search_movie/" class="form-inline">
+      {% csrf_token %}
+      <br>
+      <br>
+      <input class="form-control mr-sm-2" type="text" name="find" class="form-control" placeholder="Title, Director">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" class="btn btn-danger">Search</button>
+      <br>
+    </form>
+    <br>
+    <div>
+      {% if messages %}
+        <ul class="messages">
+          {% for m in messages %}
+           {% if "moviesearch" in m.tags %}
+            <li style="color: red">{{ m }}</li>
+            <br>
+           {% endif %}
+          {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+    <div>
+      {% if reach %}
+          <table class="table table-dark">
+            <thead>
+              <tr>
+                  <th>Title</th>
+                  <th>Director</th>
+                  <th>Rating</th>
+              </tr>
+            </thead>
+           {% for m in reach %}
+            <tbody>
+                <tr>
+                  <td>{{ m.mtitle }}</td>
+                  <td>{{ m.director }}</td>
+                  <td>{{ m.rating }} / 10</td>
+                </tr>
+            </tbody>
+           {% endfor %}
+           </table>
+      {% endif %}
+    </div>
 
     <table class="table table-light">
         <thead>
           <tr>
               <th>Title</th>
-              <th>Director(s)</th>
+              <th>Director</th>
               <th>Rating</th>
               {% if user.is_authenticated %}
                 <th>Actions</th>
@@ -33,9 +102,5 @@
           {% endfor %}
         </tbody>
     </table>
-    {% if user.is_authenticated %}
-      <a class="btn btn-primary" href="/add_movie/">Add Movie</a><br><br>
-    {% else %}
-    {% endif %}
   </div>
 {% endblock content %}
