--- a/listingscreen/templates/listingscreen/tvshow/tvshows.html
+++ b/listingscreen/templates/listingscreen/tvshow/tvshows.html
@@ -1,10 +1,80 @@
 {% extends "listingscreen/base.html" %}
 
 {% block content %}
+<style>
+  #main h1 {
+    margin: 0;
+    display: inline-block;
+  }
+  #main a {
+    float: right;
+  }
+  ::-webkit-input-placeholder {
+    font-style: italic;
+  }
+  :-moz-placeholder {
+     font-style: italic;
+  }
+  ::-moz-placeholder {
+     font-style: italic;
+  }
+  :-ms-input-placeholder {
+     font-style: italic;
+  }
+</style>
   <div class="container">
-    <h1>TV Show List</h1>
-    <hr>
-
+    <div id="main">
+      <h1>TV Show List</h1>
+      {% if user.is_authenticated %}
+        <a class="btn btn-primary" href="/add_tvshow/">Add TV Show</a><br><br>
+      {% else %}
+      {% endif %}
+    </div>
+    <form method="post" action="/search_tvshow/" class="form-inline">
+      {% csrf_token %}
+      <br>
+      <br>
+      <input class="form-control mr-sm-2" type="text" name="research" class="form-control" placeholder="Title, Season #, Network">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" class="btn btn-danger">Search</button>
+      <br>
+    </form>
+    <br>
+    <div>
+      {% if messages %}
+        <ul class="messages">
+          {% for t in messages %}
+           {% if "tvshowsearch" in t.tags %}
+            <li style="color: red">{{ t }}</li>
+            <br>
+           {% endif %}
+          {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+    <div>
+      {% if beach %}
+          <table class="table table-dark">
+            <thead>
+              <tr>
+                  <th>Title</th>
+                  <th>No. of seasons</th>
+                  <th>Network</th>
+                  <th>No. of episodes</th>
+              </tr>
+            </thead>
+           {% for t in beach %}
+            <tbody>
+                <tr>
+                  <td>{{ t.ttitle }}</td>
+                  <td>{{ t.seasons }}</td>
+                  <td>{{ t.network }}</td>
+                  <td>{{ t.episodes }}</td>
+                </tr>
+            </tbody>
+           {% endfor %}
+           </table>
+      {% endif %}
+    </div>
     <table class="table table-light">
         <thead>
           <tr>
@@ -35,9 +105,5 @@
           {% endfor %}
         </tbody>
     </table>
-    {% if user.is_authenticated %}
-      <a class="btn btn-primary" href="/add_tvshow/">Add TV Show</a><br><br>
-    {% else %}
-    {% endif %}
   </div>
 {% endblock content %}
