--- a/user/templates/user/registration.html
+++ b/user/templates/user/registration.html
@@ -1,7 +1,13 @@
 {% extends "listingscreen/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
+<style>
+  #contain {
+    width: 500px;
+  }
+</style>
+</div>
+    <div class="container" id="contain">
       <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
@@ -14,8 +20,8 @@
       </form>
       <div class="border-top pt-3">
         <small class="text-muted">
-          Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
-        </small>
+          Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a><br>
+        </small><br>
       </div>
     </div>
 {% endblock content %}
