Fourth commit, miscellaneuos

--- a/listingscreen/templates/listingscreen/movie/edit_movie.html
+++ b/listingscreen/templates/listingscreen/movie/edit_movie.html
@@ -16,7 +16,7 @@
         <label class="form-group" for="mtitle">Title: <b>{{ movies.mtitle }}</b></label>
         <input class="form-control" type="text" name="mtitle" value="{{ movies.mtitle }}" placeholder="{{ movies.mtitle }}" required><br>
 
-        <label class="form-group" for="director">Director(s): <b>{{ movies.director }}</b></label>
+        <label class="form-group" for="director">Director: <b>{{ movies.director }}</b></label>
         <input class="form-control" type="text" name="director" value="{{ movies.director }}" placeholder="{{ movies.director }}" required><br>
 
         <label class="form-group" for="rating">Rating: <b>{{ movies.rating }} / 10</b></label>
