--- a/listingscreen/templates/listingscreen/movie/add_movie.html
+++ b/listingscreen/templates/listingscreen/movie/add_movie.html
@@ -16,7 +16,7 @@
         <label class="form-group" for="mtitle">Title: </label>
         <input class="form-control" type="text" name="mtitle" required><br>
 
-        <label class="form-group" for="director">Director(s): </label>
+        <label class="form-group" for="director">Director: </label>
         <input class="form-control" type="text" name="director" required><br>
 
         <label class="form-group" for="rating">Rating: 1-10</label>
